argocd/Parkinglot/Backend/ArgoCD.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/health-probe-status-codes: 200-499
    nginx.ingress.kubernetes.io/whitelist-source-range: 193.33.93.43/32
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: cert-manager-global
    external-dns.alpha.kubernetes.io/hostname: parkinglot-be.app.mddinternship.com
  labels:
    app: parking-lot
  name: pl-ingress
spec:
  rules:
    - host: parkinglot-be.app.mddinternship.com
      http:
        paths:
          - backend:
              service:
                name: pl-svc
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - parkinglot-be.app.mddinternship.com
      secretName: pl-be-tls
---
apiVersion: v1
kind: Service
metadata:
  name: pl-svc
spec:
  selector:
    app: parking-lot
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking-lot
  labels:
    app: parking-lot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking-lot
  template:
    metadata:
      labels:
        app: parking-lot
    spec:
      containers:
        - name: parking-lot
          image: nexus.tool.mddinternship.com/repository/parking-lot:610cc9635a4b1fbbfb1be2b55262cd233aa37a6f
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: nexus-docker
